<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context="uk.co.httpjmbtechnology.androidphotoextract.testapp.MainActivity"
            tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_button_pick"
            android:onClick="onClickExtract"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_thumbnail"/>

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_filename"/>

        <TextView
            android:id="@+id/filename"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_filename_app"/>

        <TextView
            android:id="@+id/filename_app_files"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_filename_external_storage"/>

        <TextView
            android:id="@+id/filename_external_storage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_width_height"/>

        <TextView
            android:id="@+id/width_x_height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_mime_type"/>

        <TextView
            android:id="@+id/mime_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_exif_make"/>

        <TextView
            android:id="@+id/exif_make"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_exif_orientation"/>

        <TextView
            android:id="@+id/exif_orientation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/label"
            android:text="@string/activity_main_raw_debug_info"/>

        <TextView
            android:id="@+id/raw_debug_information"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</ScrollView>
